[package]
name = "vrflib"
version = "1.0.0"
authors = ["Hongbin.Yuan <yuanhongbin9090@gmail.com>"]
edition = "2018"


[lib]
name = "vrfjna"
crate-type = ["dylib"]

[dependencies]
vrf = "0.2.2"
failure = "0.1.5"
openssl = "0.10"
hex = "0.3.2"
hmac-sha256 = "0.1.2"
clap = "^2.32.0"


[dev-dependencies]
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
